--- a/_includes/font-includes.html
+++ b/_includes/font-includes.html
@@ -1,6 +1,10 @@
 {% comment %}
   Separate partial for Google Webfont include, so we can override with
   different fonts as applicable.
+
+  GET RID OF UNNECESSARY WEIGHTS SOMEDAY
 {% endcomment %}
 
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abril+Fatface" />
+<link href="https://fonts.googleapis.com/css?family=Lato:100,200,300,400,600,700,800,900" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond" rel="stylesheet">
+
