--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -16,6 +16,11 @@
     <span class="site-version">Currently v{{ site.version }}</span>
   {% endif %}
 
+  {% comment %}
   {% include sidebar-icon-links.html %}
+  {% endcomment %}
+
+  <br>
+
   {% include copyright.html %}
 </div>
