--- a/_sass/hydeout/_code.scss
+++ b/_sass/hydeout/_code.scss
@@ -8,12 +8,14 @@ pre {
   font-family: $code-font-family;
 }
 
-code {
+code.highlighter-rouge {
   padding: .25em .5em;
   font-size: 85%;
   color: $code-color;
-  background-color: #f9f9f9;
+  background-color: #000;
   border-radius: 3px;
+  border-color: #111;
+  border: 1px solid #555;
 }
 
 pre {
@@ -34,7 +36,7 @@ pre code {
   margin-bottom: 1rem;
   font-size: .8rem;
   line-height: 1.4;
-  background-color: #f9f9f9;
+  background-color: #000;
   border-radius: .25rem;
 
   pre {
