--- a/_sass/hydeout/_layout.scss
+++ b/_sass/hydeout/_layout.scss
@@ -40,7 +40,7 @@ body {
   padding: $section-spacing;
 
   .site-title {
-    font-family: "Abril Fatface", serif;
+    font-family: "Cormorant Garamond", serif;
     font-weight: normal;
     font-size: $large-font-size;
     color: rgba(255,255,255,.75);
@@ -155,7 +155,7 @@ body {
 
   #sidebar, .home #sidebar {
     width: $sidebar-width;
-    text-align: left;
+    text-align: right;
 
     > *:last-child {
       margin-bottom: 0;
@@ -191,10 +191,10 @@ body {
     height: 100vh;
 
     > header {
-      color: inherit;
+      //color: inherit;
       margin: 0;
       h1, h2 {
-        color: inherit;
+        //color: inherit;
 
         &:last-child {
           margin-bottom: $heading-spacing;
