--- a/_sass/hydeout/_message.scss
+++ b/_sass/hydeout/_message.scss
@@ -6,6 +6,10 @@
 .message {
   margin-bottom: 1rem;
   padding: 1rem;
-  color: #717171;
-  background-color: #f9f9f9;
+  color: #d2cfcf;
+  background-color: #000;
+  border-radius: 3px;
+  border-color: #111;
+  border: 1px solid #555;
+
 }
