--- a/_sass/hydeout/_posts.scss
+++ b/_sass/hydeout/_posts.scss
@@ -26,6 +26,7 @@ article + *, .post-body ~ section {
 .post-title,
 .post-title a {
   color: $heading-color;
+  font-family: $title-font-family;
 }
 .page-title,
 .post-title {
