--- a/_sass/hydeout/_syntax.scss
+++ b/_sass/hydeout/_syntax.scss
@@ -1,64 +1,384 @@
-.highlight .hll { background-color: #ffc; }
-.highlight .c { color: #999; } /* Comment */
-.highlight .err { color: #a00; background-color: #faa } /* Error */
-.highlight .k { color: #069; } /* Keyword */
-.highlight .o { color: #555 } /* Operator */
-.highlight .cm { color: #09f; font-style: italic } /* Comment.Multiline */
-.highlight .cp { color: #099 } /* Comment.Preproc */
-.highlight .c1 { color: #999; } /* Comment.Single */
-.highlight .cs { color: #999; } /* Comment.Special */
-.highlight .gd { background-color: #fcc; border: 1px solid #c00 } /* Generic.Deleted */
-.highlight .ge { font-style: italic } /* Generic.Emph */
-.highlight .gr { color: #f00 } /* Generic.Error */
-.highlight .gh { color: #030; } /* Generic.Heading */
-.highlight .gi { background-color: #cfc; border: 1px solid #0c0 } /* Generic.Inserted */
-.highlight .go { color: #aaa } /* Generic.Output */
-.highlight .gp { color: #009; } /* Generic.Prompt */
-.highlight .gs { } /* Generic.Strong */
-.highlight .gu { color: #030; } /* Generic.Subheading */
-.highlight .gt { color: #9c6 } /* Generic.Traceback */
-.highlight .kc { color: #069; } /* Keyword.Constant */
-.highlight .kd { color: #069; } /* Keyword.Declaration */
-.highlight .kn { color: #069; } /* Keyword.Namespace */
-.highlight .kp { color: #069 } /* Keyword.Pseudo */
-.highlight .kr { color: #069; } /* Keyword.Reserved */
-.highlight .kt { color: #078; } /* Keyword.Type */
-.highlight .m { color: #f60 } /* Literal.Number */
-.highlight .s { color: #d44950 } /* Literal.String */
-.highlight .na { color: #4f9fcf } /* Name.Attribute */
-.highlight .nb { color: #366 } /* Name.Builtin */
-.highlight .nc { color: #0a8; } /* Name.Class */
-.highlight .no { color: #360 } /* Name.Constant */
-.highlight .nd { color: #99f } /* Name.Decorator */
-.highlight .ni { color: #999; } /* Name.Entity */
-.highlight .ne { color: #c00; } /* Name.Exception */
-.highlight .nf { color: #c0f } /* Name.Function */
-.highlight .nl { color: #99f } /* Name.Label */
-.highlight .nn { color: #0cf; } /* Name.Namespace */
-.highlight .nt { color: #2f6f9f; } /* Name.Tag */
-.highlight .nv { color: #033 } /* Name.Variable */
-.highlight .ow { color: #000; } /* Operator.Word */
-.highlight .w { color: #bbb } /* Text.Whitespace */
-.highlight .mf { color: #f60 } /* Literal.Number.Float */
-.highlight .mh { color: #f60 } /* Literal.Number.Hex */
-.highlight .mi { color: #f60 } /* Literal.Number.Integer */
-.highlight .mo { color: #f60 } /* Literal.Number.Oct */
-.highlight .sb { color: #c30 } /* Literal.String.Backtick */
-.highlight .sc { color: #c30 } /* Literal.String.Char */
-.highlight .sd { color: #c30; font-style: italic } /* Literal.String.Doc */
-.highlight .s2 { color: #c30 } /* Literal.String.Double */
-.highlight .se { color: #c30; } /* Literal.String.Escape */
-.highlight .sh { color: #c30 } /* Literal.String.Heredoc */
-.highlight .si { color: #a00 } /* Literal.String.Interpol */
-.highlight .sx { color: #c30 } /* Literal.String.Other */
-.highlight .sr { color: #3aa } /* Literal.String.Regex */
-.highlight .s1 { color: #c30 } /* Literal.String.Single */
-.highlight .ss { color: #fc3 } /* Literal.String.Symbol */
-.highlight .bp { color: #366 } /* Name.Builtin.Pseudo */
-.highlight .vc { color: #033 } /* Name.Variable.Class */
-.highlight .vg { color: #033 } /* Name.Variable.Global */
-.highlight .vi { color: #033 } /* Name.Variable.Instance */
-.highlight .il { color: #f60 } /* Literal.Number.Integer.Long */
+// Highlighting types
+// =============================================================================
+
+.highlight {
+  background-color: #000;
+}
+
+.highlight pre {
+  background-color: #000;
+}
+
+.highlight .hll {
+  background-color: #000;
+}
+
+// Comment
+
+.highlight .c {
+  color: #75715e;
+}
+
+// Error
+
+.highlight .err {
+  color: #960050;
+  background-color: #1e0010;
+}
+
+// Keyword
+
+.highlight .k {
+  color: #66d9ef;
+}
+
+// Literal
+
+.highlight .l {
+  color: #ae81ff;
+}
+
+// Name
+
+.highlight .n {
+  color: #f8f8f2;
+}
+
+// Operator
+
+.highlight .o {
+  color: #f92672;
+}
+
+// Punctuation
+
+.highlight .p {
+  color: #f8f8f2;
+}
+
+// Comment.Multiline
+
+.highlight .cm {
+  color: #75715e;
+}
+
+// Comment.Preproc
+
+.highlight .cp {
+  color: #75715e;
+}
+
+// Comment.Single
+
+.highlight .c1 {
+  color: #75715e;
+}
+
+// Comment.Special
+
+.highlight .cs {
+  color: #75715e;
+}
+
+// Generic.Emph
+
+.highlight .ge {
+  font-style: italic;
+}
+
+// Generic.Strong
+
+.highlight .gs {
+  font-weight: bold;
+}
+
+// Keyword.Constant
+
+.highlight .kc {
+  color: #66d9ef;
+}
+
+// Keyword.Declaration
+
+.highlight .kd {
+  color: #66d9ef;
+}
+
+// Keyword.Namespace
+
+.highlight .kn {
+  color: #f92672;
+}
+
+// Keyword.Pseudo
+
+.highlight .kp {
+  color: #66d9ef;
+}
+
+// Keyword.Reserved
+
+.highlight .kr {
+  color: #66d9ef;
+}
+
+// Keyword.Type
+
+.highlight .kt {
+  color: #66d9ef;
+}
+
+// Literal.Date
+
+.highlight .ld {
+  color: #e6db74;
+}
+
+// Literal.Number
+
+.highlight .m {
+  color: #ae81ff;
+}
+
+// Literal.String
+
+.highlight .s {
+  color: #e6db74;
+}
+
+// Name.Attribute
+
+.highlight .na {
+  color: #a6e22e;
+}
+
+// Name.Builtin
+
+.highlight .nb {
+  color: #f8f8f2;
+}
+
+// Name.Class
+
+.highlight .nc {
+  color: #a6e22e;
+}
+
+// Name.Constant
+
+.highlight .no {
+  color: #66d9ef;
+}
+
+// Name.Decorator
+
+.highlight .nd {
+  color: #a6e22e;
+}
+
+// Name.Entity
+
+.highlight .ni {
+  color: #f8f8f2;
+}
+
+// Name.Exception
+
+.highlight .ne {
+  color: #a6e22e;
+}
+
+// Name.Function
+
+.highlight .nf {
+  color: #a6e22e;
+}
+
+// Name.Label
+
+.highlight .nl {
+  color: #f8f8f2;
+}
+
+// Name.Namespace
+
+.highlight .nn {
+  color: #f8f8f2;
+}
+
+// Name.Other
+
+.highlight .nx {
+  color: #a6e22e;
+}
+
+// Name.Property
+
+.highlight .py {
+  color: #f8f8f2;
+}
+
+// Name.Tag
+
+.highlight .nt {
+  color: #f92672;
+}
+
+// Name.Variable
+
+.highlight .nv {
+  color: #f8f8f2;
+}
+
+// Operator.Word
+
+.highlight .ow {
+  color: #f92672;
+}
+
+// Text.Whitespace
+
+.highlight .w {
+  color: #f8f8f2;
+}
+
+// Literal.Number.Float
+
+.highlight .mf {
+  color: #ae81ff;
+}
+
+// Literal.Number.Hex
+
+.highlight .mh {
+  color: #ae81ff;
+}
+
+// Literal.Number.Integer
+
+.highlight .mi {
+  color: #ae81ff;
+}
+
+// Literal.Number.Oct
+
+.highlight .mo {
+  color: #ae81ff;
+}
+
+// Literal.String.Backtick
+
+.highlight .sb {
+  color: #e6db74;
+}
+
+// Literal.String.Char
+
+.highlight .sc {
+  color: #e6db74;
+}
+
+// Literal.String.Doc
+
+.highlight .sd {
+  color: #e6db74;
+}
+
+// Literal.String.Double
+
+.highlight .s2 {
+  color: #e6db74;
+}
+
+// Literal.String.Escape
+
+.highlight .se {
+  color: #ae81ff;
+}
+
+// Literal.String.Heredoc
+
+.highlight .sh {
+  color: #e6db74;
+}
+
+// Literal.String.Interpol
+
+.highlight .si {
+  color: #e6db74;
+}
+
+// Literal.String.Other
+
+.highlight .sx {
+  color: #e6db74;
+}
+
+// Literal.String.Regex
+
+.highlight .sr {
+  color: #e6db74;
+}
+
+// Literal.String.Single
+
+.highlight .s1 {
+  color: #e6db74;
+}
+
+// Literal.String.Symbol
+
+.highlight .ss {
+  color: #e6db74;
+}
+
+// Name.Builtin.Pseudo
+
+.highlight .bp {
+  color: #f8f8f2;
+}
+
+// Name.Variable.Class
+
+.highlight .vc {
+  color: #f8f8f2;
+}
+
+// Name.Variable.Global
+
+.highlight .vg {
+  color: #f8f8f2;
+}
+
+// Name.Variable.Instance
+
+.highlight .vi {
+  color: #f8f8f2;
+}
+
+// Literal.Number.Integer.Long
+
+.highlight .il {
+  color: #ae81ff;
+}
+
+// Generic.Subheading & Diff Unified/Comment?
+
+.highlight .gu {
+  color: #75715e;
+}
+
+// Generic.Deleted & Diff Deleted
+
+.highlight .gd {
+  color: #f92672;
+}
+
+// Generic.Inserted & Diff Inserted
+
+.highlight .gi {
+  color: #a6e22e;
+}
 
 .css .o,
 .css .o + .nt,
