--- a/_sass/hydeout/_type.scss
+++ b/_sass/hydeout/_type.scss
@@ -4,7 +4,8 @@
 
 h1, h2, h3, h4, h5, h6, .site-title {
   margin-bottom: $heading-spacing;
-  font-weight: 600;
+  font-family: $heading-font-family;
+  font-weight: 300;
   line-height: 1.25;
   color: $heading-color;
   text-rendering: optimizeLegibility;
