--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -8,7 +8,7 @@ $large-font-size: 1rem !default;
 $root-line-height: 1.9 !default;
 
 $body-bg: #121111 !default;
-$body-color: #ada8a8 !default;
+$body-color: #bababa !default;
 $heading-color: #fff !default;
 $heading-font-family: "Lato", Courier, sans-serif;
 $title-font-family: "Cormorant Garamond", Courier, serif;
