--- a/_sass/hydeout/_type.scss
+++ b/_sass/hydeout/_type.scss
@@ -36,7 +36,7 @@ p {
 }
 
 strong {
-  color: #303030;
+  color: #f0f0f0;
 }
 
 ul, ol, dl {
@@ -77,6 +77,9 @@ blockquote {
   margin: .8rem 0;
   color: #7a7a7a;
   border-left: .25rem solid $border-color;
+  background: #222;
+  border-bottom-right-radius: 1rem;
+  border-top-right-radius: 1rem;
 
   p:last-child {
     margin-bottom: 0;
